update: 完了ボタンの機能を実装

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <div class="complete-area">
       <p class="title">完了したTODO</p>
       <ul>
-        <li>
+        <li id="complete-list">
           <div class="list-row">
             <p>TODOでした</p>
             <button>戻す</button>
