--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
       <input id="add-text" placeholder="TODOを入力" />
       <button id="add-button">追加</button>
     </div>
-    <div class="imcomplete-area">
+    <div class="incomplete-area">
       <p class="title">未完了のTODO</p>
-      <ul id="imcomplete-list">
+      <ul id="incomplete-list">
         <li>
           <div class="list-row">
             <p>TODOです</p>
